bad/add_invalid_types_string_int.example_compiler_output
ERROR
[1mbad/add_invalid_types_string_int.lat:3:5: [1;31merror: [0;1maddition is defined only for int values or string values, not `string` and `int`[m
	"" + (-1);
	   [1;32m^[m
